--- a/vignettes/sensemakr.Rmd
+++ b/vignettes/sensemakr.Rmd
@@ -193,27 +193,27 @@ The plot reveals that, at the 5% significance level, the null hypothesis of zero
 
 ## Sensitivity plots of extreme scenarios
 
-Sometimes researches may be better equipped to make plausibility judgments about the strength of determinants of the treatment assignment mechanism, and have less knowledge about the determinants of the outcome. In those cases, *extreme scenario* sensitivity plots are a useful option. These are produced with the option `type = extreme`. Here one assumes confounding explains **all** or some large fraction of the residual variance of the outcome, then vary how strongly such confounding is hypothetically related to the treatment, to see how this affects the resulting point estimate. <!--and examine how the point estimate is affected under different hypothetical strenghts of the association of the confounder with the treatment. !-->
+Sometimes researchers may be better equipped to make plausibility judgments about the strength of determinants of the treatment assignment mechanism, and have less knowledge about the determinants of the outcome. In those cases, sensitivity plots using *extreme scenarios* are a useful option. These are produced with the option `type = extreme`. Here one assumes confounding explains **all** or some large fraction of the residual variance of the outcome, then vary how strongly such confounding is hypothetically related to the treatment, to see how this affects the resulting point estimate. <!--and examine how the point estimate is affected under different hypothetical strenghts of the association of the confounder with the treatment. !-->
 
 ```{r, fig.width=6}
 plot(darfur.sensitivity, type = "extreme")
 ```
 
-The default option for the extreme scenarios is `r2yz.dx = c(1, .75, .5)`, which sets the association of confounderswith outcome to  $R^2_{Y\sim Z| {\bf X}, D}$=100%,  $R^2_{Y\sim Z| {\bf X}, D}$=75%  and  $R^2_{Y\sim Z| {\bf X}, D}$=50% (producing three seprate results). The bounds on the strength of association of a confounder once, twice or three times as strongly associated with the treatment as `female` are shown as red ticks in the horizonal axis.  As the plot shows, even in the most extreme case of $R^2_{Y\sim Z| {\bf X}, D}$=100%, confounders would need to be more than twice as strongly associated with the treatment to fully explain away the point estimate. Moving to  the scenarios $R^2_{Y\sim Z| {\bf X}, D}$=75%  and  $R^2_{Y\sim Z| {\bf X}, D}$=50%, confounders would need to be more than three times as strongly associated with the treatment as was female in order to fully explain away the point estimate.
+The default option for the extreme scenarios is `r2yz.dx = c(1, .75, .5)`, which sets the association of confounders with the outcome to  $R^2_{Y\sim Z| {\bf X}, D}$=100%,  $R^2_{Y\sim Z| {\bf X}, D}$=75%  and  $R^2_{Y\sim Z| {\bf X}, D}$=50% (producing three separate curves). The bounds on the strength of association of a confounder once, twice or three times as strongly associated with the treatment as `female` are shown as red ticks in the horizonal axis.  As the plot shows, even in the most extreme case of $R^2_{Y\sim Z| {\bf X}, D}$=100%, confounders would need to be more than twice as strongly associated with the treatment to fully explain away the point estimate. Moving to  the scenarios $R^2_{Y\sim Z| {\bf X}, D}$=75%  and  $R^2_{Y\sim Z| {\bf X}, D}$=50%, confounders would need to be more than three times as strongly associated with the treatment as was female in order to fully explain away the point estimate.
 
 # A disciplined discussion about confounding
 
-Having demonstrated the basic functionality of the package, we recall here several important caveats on intepretation that apply to any sensitivity analyses. 
+Having demonstrated the basic functionality of the package, here we recall some important caveats on intepretation that apply to any sensitivity analyses. 
 
-The results computed by `sensemakr()` tell us what we need to be prepared to believe in order to sustain that a given estimate is not due to confounding. In particular, the results of the sensitivity analysis performed here show that, to explain all the observed estimated effect, even in a worst case scenario where the unobserved confounder explains all residual variation of the outcome, this unobserved confounder would need to be more than twice as strongly associated with the treatment as the covariate `female`. Whether one finds this informative or not, this is a *true quantitative statement* that describes the strength of confounding needed to overturn the research conclusions. 
+The results computed by `sensemakr()` tell us what we need to be prepared to believe in order to sustain that a given conclusion is not due to confounding. In particular, the results of the sensitivity analysis performed here show that, to explain all the observed estimated effect, even in a worst case scenario where the unobserved confounder explains all residual variation of the outcome, this unobserved confounder would need to be more than twice as strongly associated with the treatment as the covariate `female`. This is a *true quantitative statement* that describes the strength of confounding needed to overturn the research conclusions. 
 
-The analysis, however, says nothing about whether such a confounder does or does not exist. The roll of sensitivity analysis it therefore to *discipline the discussion* regarding the causal interpretation of the effect estimate. In particular,
+The analysis, however, says nothing about whether such a confounder does or does not exist. The role of sensitivity analysis is, therefore, to *discipline the discussion* regarding the causal interpretation of the effect estimate. In particular,
 
 1. A causal interpretation of the estimate may be defended by articulating that a confounder with such strength is unlikely. For instance, one could argue that, given the way injuries (the "treatment") occurred, the scope for targeting particular types of individuals was quite limited; aircraft dropped makeshift and unguided bombs and other objects over villages, and militia raided without concern for who they are targeting---the only known major exception to this was targeting gender, which is one of the most visually apparent characteristics of an individual, and was a strong factor in targetting. 
 
-2. Likewise, similar grounds are required to persuasively dismiss a causal interpretation of the estimate. There are standards of (relative) strength that hypothesized unobserved confounders need to meet in order to be problematic. For instance, a skeptic has to articulate (using domain knowledge) why a confounder that explains at least more than twice of the variation of the treatment assignment than the covariate `female` is plausible. Otherwise, that confounder cannot logically account for all the observed association, even in an extreme scenario.
+2. Likewise, similar grounds are required to persuasively dismiss a causal interpretation of the estimate. There are standards of (relative) strength that the hypothesized unobserved confounders need to meet in order to be problematic. For instance, a skeptic has to articulate (using domain knowledge) why a confounder that explains at least more than twice of the variation of the treatment assignment than the covariate `female` is plausible. Otherwise, that confounder cannot logically account for all the observed association, even in an extreme scenario.
 
-Robustness in the face of confouding is thus claimed to the extent one agrees with the arguments in 1 (which rely on domain knowledge about attacks in Darfur), while a result can be deemed fragile insofar as alternative stories meeting the requirements in 2 can be offered. Sensitivity analyses do not obviate discussions about confouding by engaging an automatic procedure, but rather stimulates a more displined, quantitative argument about confounding.
+Robustness in the face of confouding is thus claimed to the extent one agrees with the arguments in 1 (which rely on domain knowledge about attacks in Darfur), while a result can be deemed fragile insofar as alternative stories meeting the requirements in 2 can be offered. Sensitivity analyses should not be used to obviate discussions about confouding by engaging in automatic procedures; rather, they should stimulate a more displined, quantitative argument about confounding, in which such statements are made and properly debated.
 
 # Going further
 
@@ -221,7 +221,7 @@ The basic functionality demonstrated here will likely suffice for most users, mo
 
 # References
 
-Cinelli, C. Hazlett, C. (2020) "Making Sense of Sensitivity: Extending Omitted Variable Bias". Journal of the Royal Statistical Society, Series B (Statistical Methodology). ( [link](https://doi.org/10.1111/rssb.12348))
+Cinelli, C. Hazlett, C. (2020) "Making Sense of Sensitivity: Extending Omitted Variable Bias". Journal of the Royal Statistical Society, Series B (Statistical Methodology). ( [link](https://doi.org/10.1111/rssb.12348) )
 
-Hazlett, C. (2019). Angry or Weary? How Violence Impacts Attitudes toward Peace among Darfurian Refugees. Journal of Conflict Resolution.( [link](https://journals.sagepub.com/doi/pdf/10.1177/0022002719879217?casa_token=XuE5PCptuI0AAAAA:Mcnx00WfCn2skXPgW9WcNGN_f7qxHM_9PvRSdbLiPQUi0MkfW9VFBpNcwnScJPS2xw4NBZjsTU_u9g)) 
+Hazlett, C. (2019). Angry or Weary? How Violence Impacts Attitudes toward Peace among Darfurian Refugees. Journal of Conflict Resolution.( [link](https://journals.sagepub.com/doi/pdf/10.1177/0022002719879217?casa_token=XuE5PCptuI0AAAAA:Mcnx00WfCn2skXPgW9WcNGN_f7qxHM_9PvRSdbLiPQUi0MkfW9VFBpNcwnScJPS2xw4NBZjsTU_u9g) ) 
 
