--- a/vignettes/informal_benchmarking.Rmd
+++ b/vignettes/informal_benchmarking.Rmd
@@ -33,9 +33,9 @@ embed_png <- function(path, dpi = NULL) {
 
 ## Introduction
 
-Informal "benchmarking" approaches have been employed by numerous earlier sensitivity analyses as a means to aid interpreting by describing how confounding "not unlike" some observed covariate would alter results (e.g., Imbens, 2003; Blackwell, 2013; Hosman et al. 2010, Dorie et al., 2016, Hong et al. 2018). [Cinelli and Hazlett (2020)](https://doi.org/10.1111/rssb.12348) show why these approaches sometimes lead to erroneous conclusions, and offer a more formal approach rooted in bounding the bias that could be produced by unobserved confounding when we assume it has particular relative "strength" compared to an observed covariate. 
+Informal "benchmarking" procedures have been widely suggested in the sensitivity analysis literature as a means to aid interpretation. It intends to describe how an unobserved confounder $Z$ "not unlike" some observed covariate $X_j$ would alter the results of a study (e.g., Imbens, 2003; Blackwell, 2013; Hosman et al. 2010, Dorie et al., 2016, Hong et al. 2018). [Cinelli and Hazlett (2020)](https://doi.org/10.1111/rssb.12348) show why these proposals may lead users to erroneous conclusions, and offer formal bounds on the bias that could be produced by unobserved confounding "as strong" as certain observed covariates. 
 
-To aid in understanding and appreciating the risk of informal benchmarking procedures, this vignette replicates the example in Section 6.1 of [Cinelli and Hazlett (2020)](https://doi.org/10.1111/rssb.12348), in which such benchmarks produce clearly misleading results. Further, replicating this example with the `sensemakr` provides a useful tutorial on how users can construct their own sensitivity contour plots with customized bounds rather than relying only on higher level functions.
+To aid in understanding and appreciating the risk of informal benchmarking procedures, this vignette replicates the example in Section 6.1 of [Cinelli and Hazlett (2020)](https://doi.org/10.1111/rssb.12348), in which such benchmarks produce clearly misleading results. Further, replicating this example with `sensemakr` provides a useful tutorial on how users can construct their own sensitivity contour plots with customized bounds, beyond what is offered by default on the package.
 
 ## Background
 
